--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,10 @@ server.port = 8082
 
 spring.mail.host = smtp.gmail.com
 spring.mail.port = 587
-spring.mail.username = panithan.ponpadung@gmail.com
-spring.mail.password = Ethernal
+spring.mail.username = (your email)
+spring.mail.password = (your password)
 spring.mail.transport.protocol = smtp
-spring.mail.from.email = panithan.ponpadung@gmail.com
+spring.mail.from.email = (optional)
 
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.connectiontimeout = 5000
